--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@
   left: 0;
   width: 100vw;
   height: 300px;
+  z-index: 1;
 }
 
 .nav_wrap-brand-brand .sub .sub-wrap {
@@ -166,6 +167,7 @@
   left: 0;
   width: 100vw;
   height: 300px;
+  z-index: 2;
 }
 
 .nav_wrap-brand-shoes .sub .sub-wrap {
@@ -282,6 +284,7 @@
   width: 100vw;
   height: 300px;
   background-color: white;
+  z-index: 3;
 }
 
 .nav_wrap-brand-kids .sub .sub-wrap .sub-wrap-three-title {
